// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkDismissibleChip should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 2,
      },
      null,
    ]
  }
>
  <View
    accessibilityLabel="Dismiss"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(230, 228, 235)",
          "borderRadius": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 20,
          "paddingHorizontal": 8,
        },
        Object {
          "minHeight": 28,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Object {
            "color": "rgb(129, 123, 143)",
            "includeFontPadding": false,
            "marginStart": 4,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkDismissibleChip should render correctly with arbitrary props 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 2,
      },
      null,
    ]
  }
>
  <View
    accessibilityLabel="Dismiss"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(230, 228, 235)",
          "borderRadius": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 20,
          "paddingHorizontal": 8,
        },
        Object {
          "minHeight": 28,
        },
      ]
    }
    testID="123"
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Object {
            "color": "rgb(129, 123, 143)",
            "includeFontPadding": false,
            "marginStart": 4,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkDismissibleChip should render correctly with custom style 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 2,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityLabel="Dismiss"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(230, 228, 235)",
          "borderRadius": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 20,
          "paddingHorizontal": 8,
        },
        Object {
          "minHeight": 28,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Object {
            "color": "rgb(129, 123, 143)",
            "includeFontPadding": false,
            "marginStart": 4,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
